--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "VMTranslator",
+            "request": "launch",
+            "mainClass": "TEST.VMTranslator",
+            "projectName": "nand2tetris_937a9ed"
+        },
+        {
+            "type": "java",
             "name": "Launch with Arguments Prompt",
             "request": "launch",
             "mainClass": "",
